--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@ DB_NAME='tech_db'
 DB_USER='root'
 DB_PASSWORD='P1234567'
 DB_SECRET='big secret'
-JAWSDB_URL=''
+JAWSDB_URL='mysql://fcn73y4teawev1iz:y0fkiccf2a0quzna@j21q532mu148i8ms.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/bo4934x0n1qc8lp9'
